@@ -1,3 +1,6 @@
+==2014-03-22==
+* Metadata queries can return global cube
+
 ==2014-03-18==
 * For the first time, a GDP per capita calculation could be done in one go.
 
